--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>WebGL Project</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="css/style.css" rel="stylesheet" />
+    <!-- <link href="css/style.css" rel="stylesheet" /> -->
   </head>
   <body onload="InitDemo();">
     <canvas id="webgl-tut-canvas" width="800" height="600"></canvas>
