--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>WebGL Project</title>
+    <title>WebGL - Rotating Cube</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <link href="css/style.css" rel="stylesheet" /> -->
@@ -10,6 +10,8 @@
     <canvas id="webgl-tut-canvas" width="800" height="600"></canvas>
     <br />
     <i>Demo is above this text</i>
+    <!-- <script src="gl-matrix.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/3.4.1/gl-matrix-min.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
