feat: add crate texture to rotating cube

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <canvas id="webgl-tut-canvas" width="800" height="600"></canvas>
     <br />
     <i>Demo is above this text</i>
+    <img
+      id="crate-texture"
+      src="./crate-texture.png"
+      hidden
+      alt="Crate Image"
+    />
     <!-- <script src="gl-matrix.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/3.4.1/gl-matrix-min.js"></script>
     <script src="app.js"></script>
